# esp32-s3-std-tutorial

./: .gitignore  Cargo.toml  README.md  cfg.toml  diagram.json  rust-toolchain.toml  sdkconfig  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
app/adc/ad_multichannel/: Cargo.toml  README.md  cfg.toml
app/adc/ad_multichannel/src/: main.rs
app/adc/adc/: Cargo.toml  README.md  cfg.toml
app/adc/adc/src/: main.rs
app/adc/adc_oneshot/: Cargo.toml  README.md  cfg.toml
app/adc/joystick_potentiometer_3d/: Cargo.toml  README.md  cfg.toml
app/adc/potentiometer_reading_voltage/: Cargo.toml  README.md  cfg.toml
app/basic/blinky/: Cargo.toml  README.md  cfg.toml
app/basic/button/: Cargo.toml  README.md  cfg.toml
app/basic/button_async/: Cargo.toml  README.md  cfg.toml
app/basic/button_toggle/: Cargo.toml  README.md  cfg.toml
app/basic/buzzer/: Cargo.toml  README.md  cfg.toml
app/basic/hello_world/: Cargo.toml  README.md  cfg.toml
app/basic/led_flow_light/: Cargo.toml  README.md  cfg.toml
app/basic/light_sensor_control_buzzer/: Cargo.toml  README.md  cfg.toml
app/basic/log_level/: Cargo.toml  cfg.toml
app/basic/log_level copy/: Cargo.toml  README.md
app/basic/oled_show_str/: Cargo.toml  README.md  cfg.toml
app/basic/oled_show_str/src/: main.rs
app/basic/opposing_infrared_sensor_buzzer/: Cargo.toml  README.md  cfg.toml
app/delay/async_timer_delay/: Cargo.toml  README.md  cfg.toml
app/delay/freertos_delay/: Cargo.toml  README.md  cfg.toml
app/dma/: DMA介绍.md
app/dma/print_memory_address/: Cargo.toml  README.md  cfg.toml
app/encoder/rotary_encoder/: Cargo.toml  README.md  cfg.toml
app/encoder/rotary_encoder_speed/: Cargo.toml  README.md  cfg.toml
app/ffi/bindgen_hello/: README.md
app/hardware/hardware_memory_size/: Cargo.toml  README.md  cfg.toml
app/hardware/hardware_multiple_rgb_led/: Cargo.toml  README.md  cfg.toml
app/hardware/hardware_rgb_led/: Cargo.toml  README.md  cfg.toml
app/http/http_client/: README.md  cfg.toml
app/http/http_server/: Cargo.toml  README.md
app/http/http_server_shtcx/: README.md
app/http/http_server_vue/: Cargo.toml  README.md  cfg.toml
app/http/http_ureq_client/: README.md  cfg.toml  sdkconfig
app/http/https_client/: README.md  cfg.toml
app/http/wifi_check/: build.rs  cfg.toml
app/i2c/i2c_hard_mpu6050/: Cargo.toml  README.md  cfg.toml
app/i2c/i2c_master_slave/: Cargo.toml  README.md  cfg.toml
app/i2c/i2c_mpu6050_crate/: Cargo.toml  README.md  cfg.toml
app/i2c/i2c_soft_mpu6050/: Cargo.toml  README.md  cfg.toml
app/i2c/i2c_ssd1306/: Cargo.toml  README.md  cfg.toml
app/interrupt/button_isr/: Cargo.toml  README.md  cfg.toml
app/interrupt/key_isr1/: Cargo.toml  README.md  cfg.toml
app/interrupt/key_isr2/: Cargo.toml  README.md  cfg.toml
app/interrupt/key_isr3/: Cargo.toml  README.md  cfg.toml
app/interrupt/opposing_infrared_sensor_count/: Cargo.toml  README.md  cfg.toml
app/interrupt/rotary_encoder_count/: Cargo.toml  README.md  cfg.toml
app/interrupt/rtc_gpio/: Cargo.toml  README.md  cfg.toml
app/interrupt/rtc_isr/: Cargo.toml  README.md  cfg.toml
app/interrupt/timer_alarm_isr/: Cargo.toml  README.md  cfg.toml
app/interrupt/timer_external_clock/: Cargo.toml  README.md  cfg.toml
app/interrupt/timer_isr/: Cargo.toml  README.md
app/interrupt/timer_notify/: Cargo.toml  README.md  cfg.toml
app/intro/http_client/: Cargo.toml
app/intro/http_server/: cfg.toml
app/intro/http_server_shtcx/: Cargo.toml  cfg.toml
app/intro/http_ureq_client/: Cargo.toml
app/intro/https_client/: Cargo.toml  sdkconfig
app/intro/wifi_check/: Cargo.toml  README.md  cfg.toml
app/ledc/ledc_simple/: Cargo.toml  README.md  cfg.toml
app/ledc/ledc_threads/: Cargo.toml  README.md  cfg.toml
app/ledc/pwm_driven_motor/: Cargo.toml  README.md  cfg.toml
app/ledc/pwm_driven_servo/: Cargo.toml  README.md  cfg.toml
app/rmt/rmt_morse_code/: Cargo.toml  README.md  cfg.toml
app/rmt/rmt_musical_buzzer/: Cargo.toml  README.md  cfg.toml
app/rmt/rmt_transceiver/: Cargo.toml  README.md  cfg.toml
app/spi/spi_hard_w25q64/: Cargo.toml  README.md  cfg.toml
app/spi/spi_loopback/: Cargo.toml  README.md  cfg.toml
app/spi/spi_loopback_async/: Cargo.toml  README.md  cfg.toml
app/spi/spi_nrf24l01/: Cargo.toml  README.md
app/spi/spi_soft_w25q64/: Cargo.toml  README.md  cfg.toml
app/spi/spi_soft_w25q64/src/: main.rs
app/spi/spi_st7789/: Cargo.toml  README.md  cfg.toml
app/uart/uart_continuous_tx_and_rx/: Cargo.toml  README.md  cfg.toml
app/uart/uart_fmt/: Cargo.toml  README.md  cfg.toml
app/uart/uart_isr/: Cargo.toml  README.md  cfg.toml
app/uart/uart_loopback/: Cargo.toml  README.md  cfg.toml
app/uart/uart_loopback_async/: Cargo.toml  README.md  cfg.toml
app/uart/uart_reconfigure/: Cargo.toml  README.md  cfg.toml
app/wdg/code_disable_wdg/: Cargo.toml  README.md  cfg.toml  sdkconfig
app/wdg/sdkconfig_disable_wdg/: Cargo.toml  README.md  cfg.toml
core/bindgen_hello/: README.md
core/embedded-nrf24l01/: Cargo.toml
core/embedded-nrf24l01-d/: .cargo_vcs_info.json  Cargo.toml
core/embedded-nrf24l01-d/src/: config.rs  lib.rs
core/esp32s3-mpu6050/: .cargo_vcs_info.json  Cargo.toml  README.md
core/esp32s3-mpu6050/src/: bits.rs  lib copy.rs  lib.rs
core/esp32s3-nrf24l01/: Cargo.toml
core/esp32s3-nrf24l01/src/: lib.rs  payload.rs  setup.rs
core/mpu6050/: Cargo.toml  README.md
core/mpu6050/src/: conf.rs  hal.rs  lib.rs  reg.rs
core/neopixel/: Cargo.toml  README.md
core/neopixel/src/: lib.rs
core/oled/: Cargo.toml  README.md
core/oled/src/: lib.rs  oled.rs  simple.rs
core/pcnt_encoder/: Cargo.toml  README.md
core/pcnt_encoder/src/: lib.rs
core/serial/: Cargo.toml  README.md
core/serial/src/: lib.rs
core/w25q64/: Cargo.toml  README.md
core/w25q64/src/: hal copy.rs  lib.rs  reg.rs
core/wifi/: Cargo.toml  README.md  cfg.toml.example  sdkconfig.defaults
core/wifi/src/: lib.rs
docs/: AI协助.md  Archlinux环境搭建.md  esp-idf环境配置.md  stm32示例迁移.md  问题答疑Q&A.md
docs/sdkconfig/: CMakeLists.txt  README.md
(+72 files in other folders)
