[package]
name = "esp32-s3-std-tutorial"
version = "0.1.0"
authors = ["silent-rain <2367221387@qq.com>"]
edition = "2021"
resolver = "2"
# rust-version = "1.71"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
# opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
esp-idf-svc = {version = "0.47.3", default-features = false}
toml-cfg = "0.1.3"
log = {version = "0.4", default-features = false}
anyhow = "1.0.75"

[build-dependencies]
embuild = "0.31.4"
toml-cfg = "0.1.3"
