[package]
name = "esp32-s3-std-tutorial"
version = "0.1.0"
authors = ["silent-rain <2367221387@qq.com>"]
edition = "2021"
resolver = "2"
# rust-version = "1.71"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
# opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

# pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
esp-idf-svc = { version = "0.47.3", default-features = false }
# esp-idf-sys = "0.33.7"
enumset = "1.1.3"
toml-cfg = "0.1.3"
log = { version = "0.4", default-features = false }
anyhow = "1.0.75"

[build-dependencies]
embuild = "0.31.4"
toml-cfg = "0.1.3"

[package.metadata.esp-idf-sys]
# MCU 名称
mcu = "esp32s3"
# esp-idf 版本
# native builder only
esp_idf_version = "v5.1.1"
# 工具链路径设置为全局（global）
esp_idf_tools_install_dir = "global"
# SDK 配置文件路径
esp_idf_sdkconfig = "sdkconfig"
# esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
# 使用 ESP-IDF 的本地模式来禁用远程下载
# git clone --branch v5.1.1 https://github.com/espressif/esp-idf.git
idf_path = "/home/one/.espup/esp-idf"
# esp-idf 组件管理器, 运行期间自动从组件注册表或 Git 存储库中获取组件
# esp_idf_component_manager = "y"
# esp_idf_components = ["esp_psram", "spi_flash"]
# esp_idf_components = ["spi_flash"]
# ESP_IDF_COMP_ESP_PSRAM_ENABLED = "true"


[workspace]
members = [
    # 开门狗
    # "app/wdg/code_disable_wdg",
    "app/wdg/sdkconfig_disable_wdg",
    # 基础示例
    "app/basic/hello_world",
    "app/basic/log_level",
    "app/basic/blinky",
    "app/basic/oled_show_str",
    # 硬件
    "app/hardware/hardware_memory_size",
    "app/hardware/hardware_rgb_led",
    "app/hardware/hardware_multiple_rgb_led",
    # 延迟
    "app/delay/freertos_delay",
    "app/delay/async_timer_delay",
    # ADC
    "app/adc/adc",
    "app/adc/adc_oneshot",
    "app/adc/joystick_potentiometer_3d",
    # C 绑定
    "app/ffi/ffi_hello",
    "app/ffi/bindgen_hello",
    # 组建库
    "core/neopixel",
    "core/oled",
]
