[package]
name = "wifi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-svc = "0.47.3"
anyhow = "1.0.79"
log = "0.4.20"


[dev-dependencies]
toml-cfg = "0.1.3"


[build-dependencies]
embuild = "=0.31.4"
