[package]
name = "spi_soft_w25q64"
version = "0.1.0"
edition = "2021"


[features]
default = ["std", "embassy", "esp-idf-svc/native"]

# pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
esp-idf-svc = { version = "0.47.3", default-features = false }
# esp-idf-sys = "0.33.7"
enumset = "1.1.3"
toml-cfg = "0.1.3"
log = { version = "0.4", default-features = false }
anyhow = "1.0.79"

[dependencies.w25q64]
path = "../../../core/w25q64"


[build-dependencies]
embuild = "0.31.4"
toml-cfg = "0.1.3"

[package.metadata.esp-idf-sys]
# MCU 名称
mcu = "esp32s3"
# esp-idf 版本
# native builder only
esp_idf_version = "v5.1.1"
# 工具链路径设置为全局（global）
esp_idf_tools_install_dir = "global"
# SDK 配置文件路径
esp_idf_sdkconfig = "sdkconfig"
# esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
# 使用 ESP-IDF 的本地模式来禁用远程下载
# git clone --branch v5.1.1 https://github.com/espressif/esp-idf.git
idf_path = "/home/one/.espup/esp-idf"
# esp-idf 组件管理器, 运行期间自动从组件注册表或 Git 存储库中获取组件
# esp_idf_component_manager = "y"
# esp_idf_components = ["spi_flash"]
